--- a/index.html
+++ b/index.html
@@ -33,6 +33,49 @@
     <i class="fa-solid fa-cart-shopping"></i>
   </header>
   </div>
+  <!-- section 2 productos -->
+  <div class="section-productos" id="productos">
+  <h2>PRODUCTOS</h2>    
+  <!-- producto1 -->
+  <div class="container-productos">
+    <div class="productos">
+      <img src="./img/fwd/mesavelador.jpg" alt="mesavelador" class="product">
+      <p class="producto-tittle"> MESA DE LUZ</p>
+      <span class="precio">$ 1500</span>
+      <input type="button" class="btn-anadir" value="anadir">
+    </div>
+    <!-- producto2 -->
+    <div class="productos">
+      <img src="./img/fwd/ratona.jpg" alt="mesa-ratona" class="product">
+      <p class="producto-tittle"> MESA RATONA CON SEPARACION</p>
+      <span class="precio">$ 1500</span>
+      <input type="button" class="btn-anadir" value="anadir">
+    </div>
+    <!-- producto3 -->
+    <div class="productos">
+      <img src="./img/fwd/ratona.jpg" alt="MESA-RATONA" class="product">
+      <p class="producto-tittle"> MESA RATONA</p>
+      <span class="precio">$ 1500</span>
+      <input type="button" class="btn-anadir" value="anadir">
+    </div>
+    <!-- producto4 -->
+    <div class="productos">
+      <img src="./img/fwd/florero.jpg" alt="ESQUINERA" class="product">
+      <p class="producto-tittle"> ESQUINERA</p>
+      <span class="precio">$ 1500</span>
+      <input type="button" class="btn-anadir" value="anadir">
+    </div>
+  </div>
+  </div>
+  <!-- section 3 NOSOTROS -->
+  <div class="nosotros" id="nosotros">
+    <h2>NOSOTROS</h2>
+    <p>Somos una empresa familiar que nos dedicamos a la fabricacion de muebles combinando el uso de hierro y madera para que tus espacios sean mas acogedores.
+      realizamos todos los muebles a mano para lograr la terminacion que mejor convine con tus espacios
+    </p>
+
+  </div>
+  
   
 </body>
 </html>
