--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-
+  
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <title>Document</title>
 </head>
 <body>
@@ -46,8 +50,8 @@
     </div>
     <!-- producto2 -->
     <div class="productos">
-      <img src="./img/fwd/ratona.jpg" alt="mesa-ratona" class="product">
-      <p class="producto-tittle"> MESA RATONA CON SEPARACION</p>
+      <img src="./img/fwd/bancoPlaza.png" alt="mesa-ratona" class="product">
+      <p class="producto-tittle"> BANCO DE PLAZA</p>
       <span class="precio">$ 1500</span>
       <input type="button" class="btn-anadir" value="anadir">
     </div>
@@ -65,7 +69,38 @@
       <span class="precio">$ 1500</span>
       <input type="button" class="btn-anadir" value="anadir">
     </div>
-  </div>
+  <!-- </div> -->
+  <h2>PRODUCTOS PERSONALIZADOS, PEDI COTIZACION</h2>
+  <!-- <div class="personalizados Productos"> -->
+     <!-- producto5 -->
+    <div class="productos">
+      <img src="./img/fwd/bajoparrilla.png" alt="bajoparrilla" class="product">
+      <p class="producto-tittle"> BAJO PARRILA</p>
+      <!-- <span class="precio">$ 1500</span> -->
+      <input type="button" class="btn-anadir cotizar" value="cotizar">
+    </div>
+      <!-- producto6 -->
+      <div class="productos">
+        <img src="./img/fwd/frenteParrilla1.png" alt="frenteparrilla" class="product">
+        <p class="producto-tittle"> FRENTE PARRILA</p>
+        <!-- <span class="precio">$ 1500</span> -->
+        <input type="button" class="btn-anadir cotizar" value="cotizar">
+      </div>
+        <!-- producto7 -->
+    <div class="productos">
+      <img src="./img/fwd/isla.png" alt="ISLA" class="product">
+      <p class="producto-tittle"> ISLA</p>
+      <!-- <span class="precio">$ 1500</span> -->
+      <input type="button" class="btn-anadir cotizar" value="cotizar">
+    </div>
+     <!-- producto8 -->
+     <div class="productos">
+      <img src="./img/fwd/rack.png" alt="rack" class="product">
+      <p class="producto-tittle"> RACK PARA TV</p>
+      <!-- <span class="precio">$ 1500</span> -->
+      <input type="button" class="btn-anadir cotizar" value="cotizar">
+    </div>
+  <!-- </div> -->
   </div>
   <!-- section 3 NOSOTROS -->
   <div class="nosotros" id="nosotros">
@@ -74,6 +109,10 @@
       realizamos todos los muebles a mano para lograr la terminacion que mejor convine con tus espacios
     </p>
 
+  </div>
+  <!-- ponemos el logo de whatsapp -->
+  <div class="whatsapp">
+    <i class="fa-brands fa-whatsapp"></i>
   </div>
   
   
