--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li><a href="#nosotros">Nosotros</a></li>
         <li><a href="#productos">Productos</a></li>
         <li><a href="#contactos">Contactos</a></li>
-        <li><a href="#cuenta">Cuenta</a></li>
+        <li><a href="login.html">Cuenta</a></li>
       </ul>
       
     </nav>
@@ -114,7 +114,34 @@
   <div class="whatsapp">
     <i class="fa-brands fa-whatsapp"></i>
   </div>
-  
-  
+  <div class="contactos" id="contactos">
+    <h2>DEJANOS TU MENSAJE</h2>
+    <div class="nombre input">
+    <label for="nombre">Nombre: </label>
+    <input type="text" id="nombre" placeholder="Ingrese su Nombre">
+  </div>
+  <div class="apellido input">
+    <label for="apellido">Apellido: </label>
+    <input type="text" id="apellido" placeholder="Ingrese su apellido">
+  </div>
+  <div class="email input">
+    <label for="email">Email: </label>
+    <input type="text" id="email" placeholder="Ingrese su email">
+  </div>
+  <div class="consulta input">
+    <label for="consulta">Consulta: </label>
+    <!-- <input type="textarea" id="consulta" placeholder="Ingrese su consulta"> -->
+    <textarea id="consulta" name="user_message" placeholder="ingrese su mensaje"></textarea>
+  </div>
+  <input type="submit" value="ENVIAR">
+  </div>
+  <footer>
+    <h3>BUSCANOS</h3>
+    <div class="redes">
+    <i class="fa-brands fa-instagram"></i>
+    <i class="fa-brands fa-facebook-f"></i>
+    </div>
+    <p> Hecho por Ignacio Lavigne </p>
+  </footer>
 </body>
 </html>
