--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="section-container header-container">
   <header class="header">
     <div class="container-logo">
-      <img src="./img/logo.png" alt="logo strike">
+      <a href="#productos"><img src="./img/logo.png" alt="logo strike"></a>
     </div>
     <nav class="navbar">
       <label for="toggle-menu">
