--- a/login.html
+++ b/login.html
@@ -9,15 +9,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    <div class="login-container1">
+    <div class="container-logo">
+        <!-- <img src="./img/logo.png" alt="logo strike"> -->
+        <a href="./index.html"><img src="./img/logo.png" alt="logo strike"></a>
+      </div>
+        <div class="login-container">
+        
         <i class="fa-solid fa-user"></i>
-        <label for="email"> USUARIO</label>
+        <div class="usuaio login">
+        <label for="email">USUARIO: </label>
         <input type="email" id="email" placeholder="ingrese su email">
-        <label for="password"> CONTRASEÑA</label>
+        </div>
+        <div class="contrasena  login">
+        <label for="password">CONTRASEÑA: </label>
         <input type="password" id="password" placeholder="ingrese su contraseña">
+        </div>
         <input type="submit" value="Ingresar" class="btnsubmit">
-        <input type="botton" value="¿olvido de contraseña?" class="btnolvido">
-        <input type="botton" value="crear cuenta" class="btncrear">
+        <input type="botton" value="¿olvido de contraseña?" class="btn2 btnsubmit">
+        <input type="botton" value="crear cuenta" class="btn2 btnsubmit">
     </div>
     
 </body>
