--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </label>
       <input type="checkbox" id="toggle-menu">
       <ul class="navbar-list">
-        <li><a href="#nosotros">Nosotros</a></li>
-        <li><a href="#productos">Productos</a></li>
-        <li><a href="#contactos">Contactos</a></li>
-        <li><a href="login.html">Cuenta</a></li>
+        <li ><a href="#nosotros">Nosotros</a></li>
+        <li ><a href="#productos">Productos</a></li>
+        <li ><a href="#contactos">Contactos</a></li>
+        <li ><a href="login.html">Cuenta</a></li>
       </ul>
       
     </nav>
@@ -70,7 +70,7 @@
       <input type="button" class="btn-anadir" value="anadir">
     </div>
   <!-- </div> -->
-  <h2>PRODUCTOS PERSONALIZADOS, PEDI COTIZACION</h2>
+  <!-- <h2>PRODUCTOS PERSONALIZADOS, PEDI COTIZACION</h2> -->
   <!-- <div class="personalizados Productos"> -->
      <!-- producto5 -->
     <div class="productos">
@@ -114,6 +114,7 @@
   <div class="whatsapp">
     <i class="fa-brands fa-whatsapp"></i>
   </div>
+  <!-- contactos -->
   <div class="contactos" id="contactos">
     <h2>DEJANOS TU MENSAJE</h2>
     <div class="nombre input">
@@ -137,9 +138,16 @@
   </div>
   <footer>
     <h3>BUSCANOS</h3>
+    <div class="foter">
     <div class="redes">
-    <i class="fa-brands fa-instagram"></i>
-    <i class="fa-brands fa-facebook-f"></i>
+    <a href="https://www.instagram.com/strikehym/"><i class="fa-brands fa-instagram"></i></a>
+    <a href="https://www.instagram.com/strikehym/"><i class="fa-brands fa-facebook-f"></i></a>
+    </div>
+    <div class="telefono">
+      <i class="fa-solid fa-phone"> 123456789</i>
+      
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3602.568375177094!2d-58.2816656165385!3d-34.71015568389329!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a331fdc70bdd5d%3A0x6c702cf3f15dabac!2sBernal%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1657910826965!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     </div>
     <p> Hecho por Ignacio Lavigne </p>
   </footer>
