--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    
+    <div class="container">
     <div class="container-logo">
         <!-- <img src="./img/logo.png" alt="logo strike"> -->
         <a href="./index.html"><img src="./img/logo.png" alt="logo strike"></a>
@@ -29,6 +29,6 @@
         <input type="botton" value="¿olvido de contraseña?" class="btn2 btnsubmit">
         <input type="botton" value="crear cuenta" class="btn2 btnsubmit">
     </div>
-    
+    </div>
 </body>
 </html>
